# clico

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
clico/: __init__.py  clico.py  models.py  utils.py
tests/: test_clico.py  test_models.py  test_utils.py
