[project]
name = "clico"
description = "The library implements create short links via https://cli.com (Ex. cli.co) service."
version = "0.2"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["cli.com", "cli.co", "clico", "short link"]
maintainers = [
    { name = "Ruslan Semagin", email = "pixel.365.24@gmail.com" }
]
install_requires = [
    "requests >=2.22.0",
    "pydantic >=1.7.3",
    "validators >=0.18.2"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only"
]

[project.urls]
homepage = "github.com/pixel365/clico"
repository = "github.com"

[build-system]
requires = ["setuptools", "wheel"]